--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
     <nav>
         <ul>
           <li><a href="index.html">About</a></li>
-          <li><a href="resume.html">Resume</a></li>
+          <li><a href="resume.html" class="active-page">Resume</a></li>
           <li><a href="favorites.html">Favorites</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
