--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
           <li><a href="index.html">About</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="favorites.html">Favorites</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html" class="active-page">Contact</a></li>
         </ul>
       </nav>
     
