--- a/favorites.html
+++ b/favorites.html
@@ -13,7 +13,7 @@
         <ul>
           <li><a href="index.html">About</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li><a href="favorites.html">Favorites</a></li>
+          <li><a href="favorites.html" class="active-page">Favorites</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
