--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="skip"><a href="#main">Skip to Main Content</a></div>
     <nav>
         <ul>
-          <li><a href="index.html">About</a></li>
+          <li><a href="index.html" class="active-page">About</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="favorites.html">Favorites</a></li>
           <li><a href="contact.html">Contact</a></li>
