--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
       <h1>Noah Martin - Contact</h1>
     </header>
     
-  <div class="contacts">
+  <div class="contacttext">
     <p>To reach me, please see my resume or reach out to noahjm@umich.edu</p>
     </div>
   </div>
