--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,8 @@
     </header>
     
   <div class="contacttext">
-    <p>To reach me, please see my resume or reach out to noahjm@umich.edu</p>
+    <p>To reach me, please see my resume or reach out to noahjm at umich dot edu</p>
+    <p>I am interested in the fields of finance and consulting, so feel free to reach out regarding employment, advice, or for a discussion regarding my own experiences going through the recruitment process for both.</p>
     </div>
   </div>
     <footer>
