--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DSDG0F9MLZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-DSDG0F9MLZ');
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
@@ -24,9 +33,9 @@
     </header>
     
   <div class="contacttext">
-    <p>To reach me, please see my resume or reach out to noahjm at umich dot edu</p>
-    <p>I am interested in the fields of finance and consulting, so feel free to reach out regarding employment, advice, or for a discussion regarding my own experiences going through the recruitment process for both.</p>
-    <p>Feel free to connect with me on LinkedIn - I would love to expand my network and help with anything I can. Please see the embedded LinkedIn badge below for my profile.</p>
+    <p class="contact_text">To reach me, please see my resume or reach out to noahjm at umich dot edu</p>
+    <p class="contact_text">I am interested in the fields of finance and consulting, so feel free to reach out regarding employment, advice, or for a discussion regarding my own experiences going through the recruitment process for both.</p>
+    <p class="contact_text">Feel free to connect with me on LinkedIn - I would love to expand my network and help with anything I can. Please see the embedded LinkedIn badge below for my profile.</p>
     <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async></script>
     <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="noahmartin12"><a class="LI-simple-link" href='https://www.linkedin.com/in/noahmartin12?trk=profile-badge'>Noah Martin</a></div>
     </div>
