--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Noah Martin</title>
+    <title>Noah Martin - Resume</title>
   </head>
   <body>
     <div class="skip"><a href="#main">Skip to Main Content</a></div>
