--- a/contact.html
+++ b/contact.html
@@ -35,9 +35,9 @@
   <div class="contacttext">
     <p class="contact_text">To reach me, please see my resume or reach out to noahjm at umich dot edu</p>
     <p class="contact_text">I am interested in the fields of finance and consulting, so feel free to reach out regarding employment, advice, or for a discussion regarding my own experiences going through the recruitment process for both.</p>
-    <p class="contact_text">Feel free to connect with me on LinkedIn - I would love to expand my network and help with anything I can. Please see the embedded LinkedIn badge below for my profile.</p>
-    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async></script>
-    <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="noahmartin12"><a class="LI-simple-link" href='https://www.linkedin.com/in/noahmartin12?trk=profile-badge'>Noah Martin</a></div>
+    <p class="contact_text">Feel free to connect with me on LinkedIn - I would love to expand my network and help with anything I can.</p>
+    <!-- <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async></script>
+    <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="noahmartin12"><a class="LI-simple-link" href='https://www.linkedin.com/in/noahmartin12?trk=profile-badge'>Noah Martin</a></div> -->
     </div>
   </div>
     <footer>
