--- a/resume.html
+++ b/resume.html
@@ -31,15 +31,15 @@
     <header id="main">
       <h1>Noah Martin - Resume</h1>
     </header>
-    
-    <div class="embedres">
-      <h2 class="resumehead">Resume / Explanation</h2>
-      <img class="resume" alt="Noah Martin Resume 2021" src="images/Screen Shot 2021-04-20 at 2.01.36 PM.png"> 
-      <p class="res_text">At the University of Michigan, I spent 2 years within the School's Literature, Science, and Arts program before applying and enrolling in the School of Information. The School of Information primarily revolves around the intersection of people and technology in the world today. My classes in UMSI have helped to spark my interest in big data, and the resources provided by the school have helped me to narrow down potential career paths, choose classes, and plan for the future.</p>
-      <p class="res_text">My work experiences, although mostly very unofficial internship jobs, have helped mold my experiences and view on what I hope to pursue for a full-time career after graduation. This coming Summer, I will be interning at a consulting firm in their Forensic and Litigation practice. My understanding of the work that I will be doing is using big data in order to help corporate teams of lawyers ensure compliance and prevent/win lawsuits.</p>
-      <p class="res_text">At school, I am involved in an organization called Wolverine Support Network, or WSN for short. WSN was created to be a place for students on acmpus to prioritize their mental health through small peer-led groups which are held weekly. Facilitating discussion in my weekly WSN group is always one of the highlights of my week, and I am very excited for my group next year to (hopefully!) be in person rather than virtual like this year's groups.</p>
-    </div>
-  
+    <main>
+      <div class="embedres">
+        <h2 class="resumehead">Resume / Explanation</h2>
+        <img class="resume" alt="Noah Martin Resume 2021" src="images/Screen Shot 2021-04-20 at 2.01.36 PM.png"> 
+        <p class="res_text">At the University of Michigan, I spent 2 years within the School's Literature, Science, and Arts program before applying and enrolling in the School of Information. The School of Information primarily revolves around the intersection of people and technology in the world today. My classes in UMSI have helped to spark my interest in big data, and the resources provided by the school have helped me to narrow down potential career paths, choose classes, and plan for the future.</p>
+        <p class="res_text">My work experiences, although mostly very unofficial internship jobs, have helped mold my experiences and view on what I hope to pursue for a full-time career after graduation. This coming Summer, I will be interning at a consulting firm in their Forensic and Litigation practice. My understanding of the work that I will be doing is using big data in order to help corporate teams of lawyers ensure compliance and prevent/win lawsuits.</p>
+        <p class="res_text">At school, I am involved in an organization called Wolverine Support Network, or WSN for short. WSN was created to be a place for students on acmpus to prioritize their mental health through small peer-led groups which are held weekly. Facilitating discussion in my weekly WSN group is always one of the highlights of my week, and I am very excited for my group next year to (hopefully!) be in person rather than virtual like this year's groups.</p>
+      </div>
+    </main>
     <footer>
       <p>Noah Martin<br/>
         &copy; SI 339 2021</p>
