--- a/contact.html
+++ b/contact.html
@@ -31,15 +31,13 @@
     <header id="main">
       <h1>Noah Martin - Contact</h1>
     </header>
-    
-  <div class="contacttext">
-    <p class="contact_text">To reach me, please see my resume or reach out to noahjm at umich dot edu</p>
-    <p class="contact_text">I am interested in the fields of finance and consulting, so feel free to reach out regarding employment, advice, or for a discussion regarding my own experiences going through the recruitment process for both.</p>
-    <p class="contact_text">Feel free to connect with me on LinkedIn - I would love to expand my network and help with anything I can.</p>
-    <!-- <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async></script>
-    <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="noahmartin12"><a class="LI-simple-link" href='https://www.linkedin.com/in/noahmartin12?trk=profile-badge'>Noah Martin</a></div> -->
+  <main>
+    <div class="contacttext">
+      <p class="contact_text">To reach me, please see my resume or reach out to noahjm at umich dot edu. I am very open and receptive to unsolicited emails regarding anything such ranging from advice, to UMSI admissions advice, to a coffee chat, so do not hesitate to reach out. </p>
+      <p class="contact_text">I am interested in the fields of finance and consulting, so feel free to reach out regarding employment, advice, or for a discussion regarding my own experiences going through the recruitment process for both. I would love to help younger members of the UMSI community go through their recuitment seasons, so I will be able to give anecdotes regarding the companies that I interviewed with, how I balanced recruitment and school, and any other help that someone may need.</p>
+      <p class="contact_text">Feel free to connect with me on LinkedIn - I would love to expand my network and help with anything I can. I find LinkedIn to be an invaluable tool for networking and finding people who can become resources to share their knowledge regarding a certain field or profession. I have had luck reaching out to recruiters as well as Michigan alumni, and recommend that you utilize it to its fullest extent.</p>
     </div>
-  </div>
+  </main>
     <footer>
       <p>Noah Martin<br/>
         &copy; SI 339 2021</p>
